// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Typography match its snapshot 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 16px;
  font-weight: normal;
  line-height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  color: inherit;
  text-align: inherit;
  text-transform: none;
}

.c0 small {
  font-size: 87.5%;
}

<span
  className="c0 anchor-typography"
>
  Test text
</span>
`;

exports[`Component: Typography should accept a custom display 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 16px;
  font-weight: normal;
  line-height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  color: inherit;
  text-align: inherit;
  display: block;
  text-transform: none;
}

.c0 small {
  font-size: 87.5%;
}

<span
  className="c0 anchor-typography"
  display="block"
>
  Text
</span>
`;

exports[`Component: Typography should accept a custom lineHeight 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 16px;
  font-weight: normal;
  line-height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  color: inherit;
  text-align: inherit;
  text-transform: none;
  line-height: 3rem;
}

.c0 small {
  font-size: 87.5%;
}

<span
  className="c0 anchor-typography"
>
  Text
</span>
`;

exports[`Component: Typography should accept a custom size 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Avenir Next,Segoe UI,Helvetica Neue,Helvetica,Roboto,sans-serif;
  font-size: 16px;
  font-weight: normal;
  line-height: 1.5rem;
  font-size: 1rem;
  line-height: 1.5rem;
  color: inherit;
  text-align: inherit;
  text-transform: none;
  font-size: 2rem;
}

.c0 small {
  font-size: 87.5%;
}

<span
  className="c0 anchor-typography"
  size={2}
>
  Text
</span>
`;
